// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog rendering renders expected elements 1`] = `
<div
  className="Dialog__backdrop"
>
  <Layer
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog Dialog--md TestClass"
    id="test-dialog"
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__title"
        id="dialogTitle"
      >
        Test
      </div>
      <div
        className="TestClass Dialog__body"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          size="medium"
          text="A"
          type="tertiary"
        />
      </div>
    </React.Fragment>
  </Layer>
</div>
`;

exports[`Dialog rendering renders expected elements when child has no className 1`] = `
<div
  className="Dialog__backdrop"
>
  <Layer
    aria-labelledby="dialogTitle"
    aria-modal={true}
    className="Dialog Dialog--md"
    id="test-dialog"
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__title"
        id="dialogTitle"
      >
        Test
      </div>
      <div
        className="Dialog__body"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          size="medium"
          text="A"
          type="tertiary"
        />
      </div>
    </React.Fragment>
  </Layer>
</div>
`;

exports[`Dialog rendering renders expected elements when onSubmit is set 1`] = `
<div
  className="Dialog__backdrop"
>
  <Layer
    aria-labelledby="dialogTitle"
    aria-modal={true}
    as="form"
    className="Dialog Dialog--md"
    id="test-dialog"
    onSubmit={[Function]}
    role="dialog"
  >
    <React.Fragment>
      <div
        className="Dialog__title"
        id="dialogTitle"
      >
        Test
      </div>
      <div
        className="TestClass Dialog__body"
      >
        This is a test
      </div>
      <div
        className="Dialog__buttons"
      >
        <Button
          id="a"
          size="medium"
          text="A"
          type="tertiary"
        />
      </div>
    </React.Fragment>
  </Layer>
</div>
`;
